--- a/ResultsPage.html
+++ b/ResultsPage.html
@@ -6,7 +6,7 @@
     <title>Search Results</title>
     <style>
         html {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.644), rgb(243, 41, 236))
+            background-image: linear-gradient(rgba(112, 39, 110, 0.578), rgba(243, 41, 236, 0.907))
             /* background-repeat: no-repeat; */
             /* background-size: 100% 100%;
             background-attachment: fixed; */
@@ -117,7 +117,7 @@
                     </div>`;
                 });
             } else {
-                resultContainer.innerHTML = `<div class="card"><p>Error: No results found</p></div>`;
+                resultContainer.innerHTML += `<div class="card"><p>Error: No results found</p></div>`;
             }
         });
 
